# eeg-online

./: LICENSE  README.md  pyproject.toml
configs/: dreyer_basenet.yaml  dreyer_finetune.yaml  dreyer_tta.yaml  lee_basenet.yaml  lee_finetune.yaml  lee_tta.yaml
data/: README.md
eeg_online/: finetune.py  train_test.py
eeg_online/datamodules/: __init__.py  base_datamodule.py  base_dataset.py  dreyer_datamodules.py  dreyer_datasets.py  lee_datamodules.py  lee_datasets.py  window_dataset.py
eeg_online/lightning_logs/dreyer_source/version_0/checkpoints/: epoch=99-step=9800.ckpt
eeg_online/lightning_logs/dreyer_source/version_1/checkpoints/: epoch=99-step=9800.ckpt
eeg_online/lightning_logs/dreyer_source/version_2/checkpoints/: epoch=99-step=9800.ckpt
eeg_online/lightning_logs/dreyer_source/version_3/checkpoints/: epoch=99-step=9800.ckpt
eeg_online/lightning_logs/dreyer_source/version_6/checkpoints/: epoch=99-step=9800.ckpt
eeg_online/lightning_logs/lee_source/version_0/checkpoints/: epoch=99-step=8300.ckpt
eeg_online/lightning_logs/lee_source/version_2/checkpoints/: epoch=99-step=8300.ckpt
eeg_online/lightning_logs/lee_source/version_4/checkpoints/: epoch=99-step=8300.ckpt
eeg_online/models/: __init__.py  basenet.py  classification_module.py  reset_bn.py
eeg_online/tta/: __init__.py  alignment.py  base.py  bn.py  norm.py  run_online_adaptation.py
eeg_online/utils/: alignment.py  get_datamodule_cls.py  get_model_cls.py  get_tta_cls.py  load_checkpoint.py  load_data_dreyer.py  load_data_lee.py
(+2 files in other folders)
